<resources>
    <string name="app_name">proyectolenguaje</string>
    <string name="contactar">Contactar</string>
    <string name="servicio_1_nombre_apellido_precios">SERVICIOS</string>
    <string name="inicio">Inicio</string>
    <string name="menu">Menú</string>
    <string name="servicios_nav">Servicios</string>
    <string name="ayuda">Ayuda</string>
    <string name="welcome">Fixit</string>
    <string name="redirect">Iniciar</string>
    <string name="titulo_portada">Fixit</string>
    <string name="texto_boton_portada">Comenzar</string>
    <string name="subtitulo_portada">Servicios a tu Alcance</string>
    <string name="descripcion_portada">Te conectamos con los especialistas que necesitas.</string>
    <string name="pregunta_portada">¿Ya tienes una cuenta?</string>
    <string name="inicio_sesion_portada"><u>Iniciar Sesión</u></string>
    <string name="nombre1_boton_seleccion_user">ESPECIALISTA</string>
    <string name="nombre2_boton_seleccion_user">CLIENTE</string>
    <string name="texto_seleccion_user">ESCOJA SU TIPO DE USUARIO:</string>
    <string name="servicios">SERVICIO 1</string>
    <string name="nombre_apellido_servicios">Nombre Apellido</string>
    <string name="registro">Registro</string>
    <string name="btnsiguiente">SIGUIENTE</string>
    <string name="telefono">Teléfono</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="rut">Rut sin puntos ni guión (Ej:101234560)</string>
    <string name="nombre">Nombre y Apellido</string>
    <string name="registrarse">Registrarse</string>
    <string name="cargar">Cargar</string>
    <string name="certificado_de_antecedentes">Certificado de antecedentes</string>
    <string name="profesion_especialidad">Profesión/Especialidad</string>
    <string name="contrasena">Contraseña</string>
    <string name="excelente">Excelente</string>
    <string name="deficiente">Deficiente</string>
    <string name="nombrecompleto">Nombre Apellido</string>
    <string name="profesion">Profesión</string>
    <string name="descripcion">Descripción</string>
    <string name="precios">Precios</string>
    <string name="numero">5.0</string>
    <string name="titulo">Servicio 1 - Nombre Apellido</string>
    <string name="comentarios">Comentarios</string>
    <string name="titulo_categorias">Categorías</string>
    <string name="nombre3_boton_seleccion_user">EMPRESA</string>
    <string name="Cambio_página_1">Página 1</string>
    <string name="titulo_home">Home</string>
    <string name="Texto_foto_de_perfil">Foto de Perfil</string>
    <string name="contrasena_2">Confirmar la contraseña</string>
    <string name="dejar_comentario_gonzalo">Dejar comentario</string>
    <string name="servicios_gonzalo">Servicios</string>
    <string name="calificacion">Calificacion</string>
    <string name="comentario">Comentario</string>
    <string name="publicar_boton">Publicar</string>
    <string name="publicar">Publicar</string>
    <string name="Etiqueta_Menu">Menu</string>
    <string name="servicios_navbar_esteban">Servicios</string>
</resources>
