<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registro_cliente_layout">

    <TextView
        android:id="@+id/Registro"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_alignParentTop="true"
        android:background="@color/navbar"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/registro"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/volver"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:layout_gravity="top"
        android:background="@drawable/ic_flechavolver"
        android:scaleType="centerInside"
        android:onClick="ReturnRegisterUser"/>

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="91dp"
        android:layout_height="92dp"
        android:layout_below="@id/Registro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/imgperfil" />

    <LinearLayout
        android:layout_below="@id/imagen"
        android:layout_marginTop="20dp"
        android:id="@+id/editTextContainer"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/TVnombre_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/nombre"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:layout_marginStart="25dp"/>

        <EditText
            android:id="@+id/ETnombre_cliente"
            android:layout_width="347dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:background="@drawable/image_rectangle1"
            />


        <TextView
            android:id="@+id/TVcorreo_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/correo_electronico"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:layout_marginStart="25dp"/>

        <EditText
            android:id="@+id/ETcorreo_cliente"
            android:layout_width="347dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:background="@drawable/image_rectangle1"
            />

        <TextView
            android:id="@+id/TVtelefono_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-0.5dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/telefono"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            />

        <EditText
            android:id="@+id/ETtelefono_cliente"
            android:layout_width="347dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:inputType="number|phone"
            android:background="@drawable/image_rectangle1"
            />

        <TextView
            android:id="@+id/Tvcontra1_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-0.5dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/contrasena"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:layout_marginStart="30dp"/>

        <EditText
            android:id="@+id/ETcontra_cliente"
            android:layout_width="347dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:background="@drawable/image_rectangle1"
            />

        <TextView
            android:id="@+id/TVcontra2_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-0.5dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/contrasena_2"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            />

        <EditText
            android:id="@+id/ETcontra2_cliente"
            android:layout_width="347dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:background="@drawable/image_rectangle1"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnregistro_cliente"
        android:layout_width="275dp"
        android:layout_height="41dp"
        android:layout_below="@id/editTextContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/registrarse"
        android:onClick="OpenMenuInicio"

        />

</RelativeLayout>